--- a/index.html
+++ b/index.html
@@ -1,16 +1,59 @@
+<!DOCTYPE html>
 <html>
     <head>
-    <script src="script.js"></script>
-    <link rel="stylesheet" href="style.css">
+        <title>
+            Simple Interest Calculator
+        </title>
+        <script src="script.js"></script>
+        <link rel="stylesheet" href="style.css">
     </head>
+        <div class ="maindiv">
     <body>
-        <h1>Simple Interest Calculator</h1>
+            <h1>Simple Interest Calculator</h1>
 
-        Amount <input type="number"  id="principal">  <br/>
-        Rate <input type="number"  id="rate">  <br/>
-        No. of Years <input type="number"  id="years">  <br/>
-        Interest : <span id="result"></span><br>
+            Amount <input type="number" id="principal">
+                <br/>
+            <div class="container">
+                Rate <input type="range" id="rate" min="1" max="20" value="10.25" step="0.25">
+                <span id="rate_val">
+                    10.25%
+                </span>
+                <br/>
+            </div>
+<!-- This script makes the rate slider work and display the updated rate value-->
+            <script> 
+                var slider = document.getElementById("rate");
+                var output = document.getElementById("rate_val");
 
-        <button onclick="compute()">Compute</button>
+                slider.oninput = function() {
+                    output.innerHTML = this.value + "%";
+                }
+            </script>
+            No. of Years 
+            <!-- This is the years drop down selector-->
+            <select id="years">
+                <option value ="1">1</option>
+                <option value ="2">2</option>
+                <option value ="3">3</option>
+                <option value ="4">4</option>
+                <option value ="5">5</option>
+                <option value ="6">6</option>
+                <option value ="7">7</option>
+                <option value ="8">8</option>
+                <option value ="9">9</option>
+                <option value ="10">10</option>
+            </select> <br/>
+            <!-- Where we compute interest with the compute function in script.js-->
+            <button onclick="compute()">Compute Interest</button><br>
+            <div id="result_style">
+            <span id="result">
+            
+            </span> 
+        </div>
     </body>
+    <footer>
+        &#169; This Calculator belongs to abc homes
+    </footer>
+        </div>
+
 </html>
